      are not compatible on x86_64 Linux for recent versions of
      \command{gcc -O2}.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL --clean} now removes copies of a
      \file{src} directory which are created when multiple
      sub-architectures are in use.  (Following a comment from
      Berwin Turlach.)
      
      \item File \file{R.css} is now installed on a per-package basis
      (in the package's \file{html} directory) rather than in each
      library tree, and this is used for all the HTML pages in the
      package.  This helps when installing packages with static HTML
      pages for use on a webserver.  It will also allow future versions
      of \R to use different stylesheets for the packages they install.
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} is deprecated
      and no longer has any effect.

      \item The previous options for \command{R CMD build --binary}
      (\option{--auto-zip}, \option{--use-zip-data} and
      \option{--no-docs}) are deprecated:
      use the new option \option{--install-args} instead.

      \item When a character value is used for the \code{EXPR}
      argument in \code{switch()}, only a single unnamed alternative
      value is now allowed.

      \item The \sQuote{experimenatal} alternative specification of a
      name space via \code{.Export()} etc is now deprecated.

      \item The wrapper \code{utils::link.html.help()} is no longer
      available.

      \item \code{zip.file.extract()} is now deprecated.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{