@@ -81,39 +81,44 @@ print.raster <- function(x, ...) {
 # Subsetting methods
 # Non-standard because raster is ROW-wise
 # Try to piggy-back on existing methods as much as possible
-# IGNORE 'drop'
+# IGNORE 'drop' -- i.e. always use  "drop = FALSE"
 `[.raster` <- function(x, i, j, ...) {
+    mdrop <- missing(drop)
+    nA <- nargs() - (!mdrop)
+    if(!mdrop && !identical(drop,FALSE))
+        warning("'drop' is always implicitly FALSE in '[.raster'")
     m <- as.matrix(x)
-    if (missing(i) && missing(j))
-        stop('No valid indices')
-    if (missing(i)) {
-        subset <- m[1:nrow(m), j, drop=FALSE]        
-    } else if (missing(j)) {
-        if (is.matrix(i)) {
-            subset <- m[i, drop=FALSE]
-        } else {
-            subset <- m[i, 1:ncol(m), drop=FALSE]
-        }
-    } else {
-        subset <- m[i, j, drop=FALSE]
+    subset <-
+	if (missing(i)) {
+	    if(missing(j)) m[ , drop=FALSE] else m[, j, drop=FALSE]
+	} else if (missing(j)) {
+	    if (nA == 2) ## is.matrix(i) || is.logical(i))
+		## FIXME: is this desirable? -- with drop=FALSE, return 1-col obj:
+		m[i, drop=FALSE]
+	    else if(nA == 3)
+		m[i, , drop=FALSE]
+	    else stop("invalid raster subsetting")
+	} else {
+	    m[i, j, drop=FALSE]
+	}
     }
     as.raster(subset)
 }
 
 `[<-.raster` <- function(x, i, j, value) {
+    nA <- nargs()
     m <- as.matrix(x)
-    if (missing(i) && missing(j))
-        stop('No valid indices')
     if (missing(i)) {
-        m[1:nrow(m), j] <- value
+	if(missing(j)) m[] <- value else m[, j] <- value
     } else if (missing(j)) {
-        if (is.matrix(i)) {
-            m[i] <- value
-        } else {
-            m[i, 1:ncol(m)] <- value
-        }
+	if (nA == 3) { ## typically is.matrix(i) || is.logical(i))
+	    m[i] <- value
+	} else if(nA == 4) {
+	    m[i, ] <- value
+	} else stop("invalid raster subassignment")
     } else {
-        m[i, j] <- value
+	m[i, j] <- value
+    }
     }
     as.raster(m)
 }
